# dll-ollvm

./: .gitignore  README.md
plugin/: CMakeLists.txt
plugin/src/: Passes.h  Plugin.cpp  PluginAnchors.cpp  Utils.cpp  Utils.h
plugin/src/stubs/: BogusCF.cpp  Flattening.cpp  SizeTrim.cpp  Substitution.cpp
samples/include/: tess_markers.h
samples/payload_dll/: payload.def
samples/payload_dll/src/: dllmain.cpp
scripts/: build-payload.ps1  build-plugin.ps1  common.ps1  setup-llvm.ps1
